# elevator-sim

./: Cargo.toml  README.md  memo.md
.github/workflows/: deploy.yml  rust.yml
src/: lib.rs
visualizer/: index.html  package-lock.json  package.json  vite.config.ts
visualizer/public/: sample_log.txt
visualizer/src/: App.tsx
