[package]
name = "elevator-sim"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.10.0"
rand_distr = "0.6.0"
rand_pcg = "0.10.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
proconio = "0.5"
derive-new = "0.7"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.4", features = ["wasm_js"] }
